--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             </li>
           </ul>
 
-          <a href="/index.html" class="logo link">
+          <a href="./index.html" class="logo link">
             <span>
               <svg class="logo-icon" width="16" height="16">
-                <use href="/img/icons.svg#icon-logo"></use>
+                <use href="./img/icons.svg#icon-logo"></use>
               </svg>
             </span>
             Veggieboost
@@ -50,23 +50,23 @@
         </nav>
         <button type="button" class="header-open-button" data-menu-open>
           <svg width="24" height="24">
-            <use href="/img/icons.svg#icon-openmob"></use>
+            <use href="./img/icons.svg#icon-openmob"></use>
           </svg>
         </button>
 
         <button type="button" class="header-menu-order" data-modal-open>
           <svg width="20" height="20">
-            <use href="/img/icons.svg#icon-shoppcart"></use>
+            <use href="./img/icons.svg#icon-shoppcart"></use>
           </svg>
         </button>
       </div>
 
       <div class="mob-menu is-hidden" data-menu>
         <div class="header-container container">
-          <a href="/index.html" class="logo link">
+          <a href="./index.html" class="logo link">
             <span>
               <svg class="logo-icon" width="16" height="16">
-                <use href="/img/icons.svg#icon-logo"></use>
+                <use href="./img/icons.svg#icon-logo"></use>
               </svg>
             </span>
             Veggieboost
@@ -74,7 +74,7 @@
 
           <button type="button" class="mobile-menu-close" data-menu-close>
             <svg class="mobile-menu-close-icon" width="24" height="24">
-              <use href="/img/icons.svg#icon-close"></use>
+              <use href="./img/icons.svg#icon-close"></use>
             </svg>
           </button>
         </div>
@@ -96,7 +96,7 @@
           <li>
             <button type="button" class="mobile-menu-order" data-modal-open>
               <svg width="20" height="20">
-                <use href="/img/icons.svg#icon-shoppcart"></use>
+                <use href="./img/icons.svg#icon-shoppcart"></use>
               </svg>
             </button>
           </li>
